@@ -746,7 +746,9 @@ class LuaContext {
       map_api_get_id,
       map_api_get_game,
       map_api_get_world,
+      map_api_set_world,
       map_api_get_floor,
+      map_api_set_floor,
       map_api_get_num_layers,
       map_api_get_size,
       map_api_get_location,
