@@ -6,6 +6,7 @@ set(lua_test_maps
   "all_entities"
   "bugs/486_diagonal_dynamic_tiles"
   "bugs/526_get_entities_same_region"
+  "bugs/656_map_set_world"
   "bugs/670_map_get_entities_no_hero"
   "bugs/686_crash_door_item"
   "bugs/699_crash_exit_surface_moving"
