@@ -37,6 +37,7 @@ Changes that do not introduce incompatibilities:
 * Add a method map:get_num_layers() (#445).
 * Add a method map:get_entities_by_type() (#796).
 * Add a method map:get_entities_in_rectangle() (#142).
+* Add methods map:set_world() and map:set_floor() (#656).
 * map:get_entities() can now be called without parameter to get all entities.
 * map:get_entities*() functions now give entities sorted in Z order (#779).
 * entity:set_optimization_distance() is now only a hint for the engine.
